<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xu_.lab1.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/studentID"
        android:id="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/editText"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="20dp"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        android:layout_marginRight="0dp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        android:layout_marginRight="0dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"

        android:layout_marginTop="24dp"
        android:hint="@string/pleaseEnterID"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/pleaseEnterPassword"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:background="@drawable/corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/login"
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" />
    <Button
        android:background="@drawable/corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/register"
        android:id="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="60dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/student"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/teacher"
            android:textSize="18sp" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />


</android.support.constraint.ConstraintLayout>
